--- a/docs/07.DEBUGGER.md
+++ b/docs/07.DEBUGGER.md
@@ -74,8 +74,8 @@ Currently, `jerryx_debugger_rp_create ()` for raw packet transport layer and
 `jerryx_debugger_serial_create (const char* config)` for serial protocol
 are also available.)
 
-The resource name provided to `jerry_parse ()` is used by the client
-to identify the resource name of the source code. This resource name
+The source name provided to `jerry_parse ()` is used by the client
+to identify the source name of the source code. This source name
 is usually a file name.
 
 ## JerryScript debugger C-API interface
@@ -103,8 +103,8 @@ typedef jerry_value_t
                                               size_t source_size, void *user_p);
 ```
 
-- `source_name_p` - resource (usually a file) name of the source code
-- `source_name_size` - size of resource name
+- `source_name_p` - source (usually a file) name of the source code
+- `source_name_size` - size of source name
 - `source_p` - source code character data
 - `source_size` - size of source code
 - `user_p` - custom pointer passed to [jerry_debugger_wait_for_client_source](#jerry_debugger_wait_for_client_source)
@@ -306,8 +306,8 @@ jerry_debugger_wait_for_client_source (jerry_debugger_wait_for_source_callback_t
  * Runs the source code received by jerry_debugger_wait_for_client_source.
  */
 static jerry_value_t
-wait_for_source_callback (const jerry_char_t *source_name_p, /**< resource name */
-                          size_t source_name_size, /**< size of resource name */
+wait_for_source_callback (const jerry_char_t *source_name_p, /**< source name */
+                          size_t source_name_size, /**< size of source name */
                           const jerry_char_t *source_p, /**< source code */
                           size_t source_size, /**< source code size */
                           void *user_p /**< user pointer */)
