Revise api reference documents after
https://github.com/jerryscript-project/jerryscript/pull/4915

JerryScript-DCO-1.0-Signed-off-by: Yonggang Luo luoyonggang@gmail.com

--- a/docs/02.API-REFERENCE.md
+++ b/docs/02.API-REFERENCE.md
@@ -5702,7 +5702,7 @@ main (void)
 
 # Functions for promise objects
 
-These APIs all depend on the es.next profile (or on some build options).
+These APIs are always enabled.
 
 ## jerry_promise_result
 
@@ -6124,7 +6124,7 @@ jerry_promise_reject (jerry_value_t promise, jerry_value_t argument);
 
 # Functions for symbols
 
-These APIs all depend on the es.next profile (or on build options).
+These APIs are always enabled.
 
 ## jerry_symbol
 
@@ -6988,7 +6988,9 @@ jerry_error_sz (jerry_error_t error_type, const char *message_p);
 Create new JavaScript DataView object.
 
 *Note*:
-  - This API depends on the es.next profile.
+  - This API depends on a build option (`JERRY_BUILTIN_DATAVIEW`) and can be checked
+    in runtime with the `JERRY_FEATURE_DATAVIEW` feature enum value,
+    see: [jerry_feature_enabled](#jerry_feature_enabled).
   - Returned value must be freed with [jerry_value_free](#jerry_value_free)
     when it is no longer needed.
 
@@ -7307,7 +7309,6 @@ Create an empty promise object which can be resolved or rejected later
 by calling jerry_promise_resolve or jerry_promise_reject.
 
 *Note*:
-  - This API depends on the es.next profile.
   - Returned value must be freed with [jerry_value_free](#jerry_value_free)
     when it is no longer needed.
 
@@ -7348,7 +7349,9 @@ jerry_promise (void)
 Create a new Proxy object with the given target and handler.
 
 *Note*:
-  - This API depends on the es.next profile.
+  - This API depends on a build option (`JERRY_BUILTIN_PROXY`) and can be checked
+    in runtime with the `JERRY_FEATURE_PROXY` feature enum value,
+    see: [jerry_feature_enabled](#jerry_feature_enabled).
   - Returned value must be freed with [jerry_value_free](#jerry_value_free)
     when it is no longer needed.
 
@@ -7408,7 +7411,9 @@ Create a new Proxy object with the given target and handler.
 The behaviour of the Proxy can be specialized with an options argument.
 
 *Note*:
-  - This API depends on the es.next profile.
+  - This API depends on a build option (`JERRY_BUILTIN_PROXY`) and can be checked
+    in runtime with the `JERRY_FEATURE_PROXY` feature enum value,
+    see: [jerry_feature_enabled](#jerry_feature_enabled).
   - Returned value must be freed with [jerry_value_free](#jerry_value_free)
     when it is no longer needed.
 
@@ -7654,7 +7659,6 @@ Create symbol from an API value.
 
 *Note*:
   - The given argument is converted to string. This operation can throw an exception.
-  - This API depends on the es.next profile.
   - Returned value must be freed with [jerry_value_free](#jerry_value_free)
     when it is no longer needed.
 
@@ -11895,7 +11899,9 @@ jerry_realm_set_this (jerry_value_t realm_value, jerry_value_t this_value)
 
 # ArrayBuffer and TypedArray functions
 
-These APIs all depend on the es.next profile.
+These APIs all depend on a build option (`JERRY_BUILTIN_TYPEDARRAY`) and can be checked
+in runtime with the `JERRY_FEATURE_TYPEDARRAY` feature enum value,
+see: [jerry_feature_enabled](#jerry_feature_enabled).
 
 ## jerry_arraybuffer_size
 
