--- a/docs/00.GETTING-STARTED.md
+++ b/docs/00.GETTING-STARTED.md
@@ -51,10 +51,10 @@ tools/build.py --debug --logging=on --error-messages=on --line-info=on
 python tools/build.py --cmake-param=CMAKE_PARAM
 ```
 
-**Set a profile mode (ES.next, ES5.1, minimal)**
+**Set a profile mode (es.next, minimal)**
 
 ```bash
-python tools/build.py --profile=es.next|es5.1|minimal
+python tools/build.py --profile=es.next|minimal
 ```
 
 See also the related [README.md](https://github.com/jerryscript-project/jerryscript/blob/master/jerry-core/profiles/README.md).
