--- a/docs/05.PORT-API.md
+++ b/docs/05.PORT-API.md
@@ -119,6 +119,8 @@ void jerry_port_context_free (void);
  *
  * The implementation can decide whether error and debug messages are logged to
  * the console, or saved to a database or to a file.
+ *
+ * @param message_p: the message to log.
  */
 void jerry_port_log (const char *message_p);
 ```
