Reduce or even remove the usage of strlen in jerry-core and jerry-ext
Improving the api of jerry-port, so that we can reduce the usage of strlen.

JerryScript-DCO-1.0-Signed-off-by: Yonggang Luo luoyonggang@gmail.com

--- a/docs/05.PORT-API.md
+++ b/docs/05.PORT-API.md
@@ -193,11 +193,12 @@ void jerry_port_line_free (jerry_char_t *buffer_p);
  *
  * @param path_p: zero-terminated string containing the input path
  * @param path_size: size of the input path string in bytes, excluding terminating zero
+ * @param out_size_p: The normalized path's size in bytes.
  *
  * @return buffer with the normalized path if the operation is successful,
  *         NULL otherwise
  */
-jerry_char_t *jerry_port_path_normalize (const jerry_char_t *path_p, jerry_size_t path_size);
+jerry_char_t *jerry_port_path_normalize (const jerry_char_t *path_p, jerry_size_t path_size, jerry_size_t *out_size_p);
 ```
 
 ```c
@@ -211,31 +212,43 @@ void jerry_port_path_free (jerry_char_t *path_p);
 
 ```c
 /**
- * Get the offset of the basename component in the input path.
+ * Check if a char of a path is a path separator.
  *
- * The implementation should return the offset of the first character after the last path separator found in the path.
- * This is used by the caller to split the path into a directory name and a file name.
+ * @param path_c: The char to check
  *
- * @param path_p: input zero-terminated path string
- *
- * @return offset of the basename component in the input path
+ * @return if a char of a path is a path separator.
  */
-jerry_size_t jerry_port_path_base (const jerry_char_t *path_p);
+bool jerry_port_path_is_separator (jerry_char_t path_c);
 ```
 
 ```c
 /**
- * Open a source file and read its contents into a buffer.
+ * Evalute the length of root component of a path
+ *
+ * @param path_p: input zero-terminated path string
+ * @param path_size: length of the path string
+ *
+ * @return length of root component of a path if it's a absolute path
+ *         0 otherwise
+ */
+jerry_size_t jerry_port_path_root (const jerry_char_t *path_p, jerry_size_t path_size);
+```
+
+```c
+/**
+ * Open a source file and read the content into a buffer.
  *
  * When the source file is no longer needed by the caller, the returned pointer will be passed to
  * `jerry_port_source_free`, which can be used to finalize the buffer.
  *
  * @param file_name_p: Path that points to the source file in the filesystem.
+ * @param file_name_size length of source file path
  * @param out_size_p: The opened file's size in bytes.
  *
  * @return pointer to the buffer which contains the content of the file.
  */
-jerry_char_t *jerry_port_source_read (const char *file_name_p, jerry_size_t *out_size_p);
+jerry_char_t *
+jerry_port_source_read (const jerry_char_t *file_name_p, jerry_size_t file_name_size, jerry_size_t *out_size_p);
 ```
 
 ```c
