fuzzer deployment add
Signed-off-by: 0x34d <ajsinghyadav00@gmail.com>

--- a/docs/00.GETTING-STARTED.md
+++ b/docs/00.GETTING-STARTED.md
@@ -123,7 +123,7 @@ allocator is used.
 **To build with libfuzzer support**
 
 ```bash
-CC=clang python tools/build.py --libfuzzer=on --compile-flag=-fsanitize=address --lto=off
+CC=clang python tools/build.py --libfuzzer=on --compile-flag=-fsanitize=address,undefined --build-type=Debug --lto=off
 ```
 
 Check the documentation of libfuzzer to get the runtime settings of the created fuzzer
